--- a/src/Body.css
+++ b/src/Body.css
@@ -6,6 +6,7 @@
     color: #fff;
     background: rgba(255, 255, 255, 0.09);
       height: 87vh;
-    padding: 30px;
+    padding:0 0;
+    overflow: hidden;
 
 }
