--- a/src/Body.css
+++ b/src/Body.css
@@ -5,8 +5,43 @@
     border-radius: 9px;
     color: #fff;
     background: rgba(255, 255, 255, 0.09);
+    background: linear-gradient(to bottom, #6c0404,black);
       height: 87vh;
     padding:0 0;
     overflow: hidden;
+
+}
+.body__info {
+    display: flex;
+    align-items: center;
+    background: rgba(255, 255, 255, 0.05);
+
+    padding: 20px;
+    border-radius: 5px;
+}
+
+.body__info img {
+  width: 200px;
+  height: 200px;
+    background: red;
+  margin-right: 20px;
+}
+
+.body__infoText {
+  color: white;
+}
+
+.body__infoText__1 {
+  font-size: 14px;
+  margin: 0;
+    opacity: 0.7;
+}
+
+.body__infoText h1 {
+  font-size: 70px;
+  margin: 0;
+
+}
+.body__playlist__music {
 
 }
