--- a/src/Header.css
+++ b/src/Header.css
@@ -13,6 +13,7 @@
 
 .header__left {
     display: flex;
+    width: 450px;
     align-items: center;
     position: relative;
 }
@@ -47,7 +48,9 @@
 }
 
 .header__searchInput {
-    width: 300px;
+
+    min-width: 80px;
+    width:100%;
     padding: 16px 30px 16px 40px;
     border: none;
     border-radius: 30px;
