--- a/src/Header.css
+++ b/src/Header.css
@@ -2,15 +2,21 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background: rgba(255, 255, 255, 0.05);
+    background: rgba(0, 0, 0, 0);
     position: sticky;
     top: 0;
     /*background-color: green;*/
     color: #fff;
     padding: 5px 20px;
     height: 70px;
+    z-index: 200;
 }
+.headerDark {
 
+    background: rgba(0, 0, 35, 0.9);
+    /*background: #539405;*/
+
+}
 .header__left {
     display: flex;
     width: 450px;
@@ -54,7 +60,7 @@
     padding: 16px 30px 16px 40px;
     border: none;
     border-radius: 30px;
-    background: rgba(0, 0, 0, 0.2);
+    background: rgba(255, 255, 255, 0.1);
     color: gray;
     font-size: 12px;
     font-weight: 600;
