--- a/src/SongRow.css
+++ b/src/SongRow.css
@@ -5,6 +5,12 @@
     color: white;
     margin:8px 30px;
     gap: 16px;
+    cursor: pointer;
+    transition: all 0.2s;
+
+
+}.songRow:hover {
+    background: rgba(255,255,255,0.3);
 
 
 }
