--- a/src/SongRow.css
+++ b/src/SongRow.css
@@ -3,21 +3,24 @@
     align-items: center;
     z-index: 100;
     color: white;
-    margin:8px 30px;
+    margin:4px ;
     gap: 16px;
     cursor: pointer;
     transition: all 0.2s;
+    padding: 6px;
+    border-radius: 5px;
 
 
 }.songRow:hover {
-    background: rgba(255,255,255,0.3);
+    background: rgba(255,255,255,0.1);
 
 
 }
 .songRow img {
 
-    width: 50px;
-    height:50px;
+    margin-left: 24px;
+    width: 40px;
+    height:40px;
     object-fit: contain;
 }
 .songRow__info {
